fixed nav section jumps

--- a/css/main.css
+++ b/css/main.css
@@ -319,6 +319,7 @@ hr.hr2 {
     line-height: 36px;
     letter-spacing: .1em;
     max-width: 960px;
+    padding-bottom: 60px;
 }
 
     #skills li {
@@ -331,6 +332,7 @@ hr.hr2 {
         /*float: none;*/
         display: block;
         text-align: left;
+        padding-bottom: none;
 
     }
         #skills li.separator.mobile {
@@ -351,13 +353,15 @@ hr.hr2 {
     #intro {
         text-align: center;
         max-width: 960px;
-        padding-top: 60px;
+        /*padding-top: 60px;
+        padding-bottom: 40px;*/
+        padding-top: 100px;
         padding-bottom: 40px;
         margin: auto;
     }
 
     #intro.minimized {
-        padding-top: 300px;
+        padding-top: 360px;
     }
 
     #intro.mobile {
@@ -375,6 +379,7 @@ hr.hr2 {
         display: block;
         float: left;
 
+
     }
 
     #hello-block {
@@ -386,7 +391,7 @@ hr.hr2 {
     #hello-block.mobile {
         float: left;
         display: block;
-        padding-top: 10px;
+        padding-top: 0px;
         padding-bottom: 40px;
     }
         #intro-1 {
@@ -429,16 +434,17 @@ hr.hr2 {
     float: left;
 }
 
-#example {
+.example {
     padding-bottom: 40px;
     max-width: 960px;
     /*max-width: 960px;*/
     margin: auto;
+    padding-top: 40px;
 }
 
 #extra-work {
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 60px;
+    padding-bottom: 80px;
     max-width: 960px;
     text-align: center;
 }
@@ -456,6 +462,7 @@ hr.hr2 {
 #img-grid img {
     padding: 10px;
     width: auto;
+
 }
 
 #img-grid img.mobile {
@@ -500,12 +507,12 @@ a {
      Just because a vendor prefix is there, doesn't mean it will
      work in a browser made by that vendor either, it's just for
      future-proofing purposes I guess. */
-  -o-transition:.3s;
-  -ms-transition:.3s;
-  -moz-transition:.3s;
-  -webkit-transition:.3s;
+  -o-transition:.2s;
+  -ms-transition:.2s;
+  -moz-transition:.2s;
+  -webkit-transition:.2s;
   /* ...and now for the proper property */
-  transition:.3s;
+  transition:.2s;
 
 }
 
@@ -514,7 +521,7 @@ a:hover {
 }
 
 #view-url a{
-    background: #362f2f;
+    background: #302e2c;
     font-style: italic;
     padding: 4px 12px 4px 12px;
     text-decoration: none;
@@ -565,6 +572,13 @@ img {
 
 #contact {
     padding-bottom: 60px;
+}
+
+
+#footer {
+    width: 100%;
+    height: 700px;
+    background-color: #22201e;
 }
 
 
